--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -1,5 +1,5 @@
 button {
-  width: 100%;
-  height: 200px !important;
-  font-size: 5rem;
+    width: 100%;
+    height: 100% !important;
+    font-size: 5rem;
 }
